--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Simon</title>
+  <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Google-font -->
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
@@ -34,7 +36,9 @@
     </div>
 
   </div>
-
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script
+<!--JS-Script -->
 <script src="./game.js"></script>
 </body>
 
